# rommate-organiser

./: .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
migrations/2024-11-22-131322_create_users_table/: up.sql
migrations/2024-11-22-131322_data_base/: down.sql  up.sql
migrations/2024-12-17-183855_create_table_html_storage/: down.sql  up.sql
migrations/2024-12-17-184514_add_html_home/: down.sql  up.sql
migrations/2024-12-19-115036_logged_in_home/: down.sql  up.sql
migrations/2024-12-19-164207_logged_in_support/: down.sql  up.sql
migrations/2024-12-19-170903_my_groups/: down.sql  up.sql
migrations/2024-12-19-210252_manage_my_groups/: down.sql  up.sql
migrations/2024-12-20-134404_logged_in_join_group/: down.sql  up.sql
migrations/2024-12-20-140103_logged_in_create_group/: down.sql  up.sql
src/: actors.rs  db_models.rs  insertables.rs  io_api_schemes.rs  main.rs  messages.rs  schema.rs  services.rs
src/db/: actors.rs  insertables.rs  messages.rs  mod.rs  models.rs  schema.rs  utils.rs
src/html_synthesis/: assembly_page.rs  builder.rs  getters.rs  mod.rs
src/sessions/: session.rs
static/css/: authForm.css  base-styles.css  drop-down.css  footer.css  genericButton.css  genericContent.css  logo.css
static/css/ManageOwnegGroups.css/: Formvisibility.css  buttons.css
static/css/Mygroup/: GroupsExpensesCharts.css  groupButton.css  table.css
static/scripts/: class_activator.js  formActivator.js  sectionActivator.js
static/scripts/Auth/: RegisterForm.js  SubmitLogInForm.js  logOut.js  session_checker.js  visibilityBySession.js
(+9 files in other folders)
