[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
log = "0.4"
env_logger = "0.10"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenv = "0.15"
chrono = "0.4.38"
actix = "0.13.5"
serde = {version = "1.0.215", features = ["derive"]}