[package]
name = "DB_DIESEL_TYPES"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-session = {version = "0.10.1", features = ["cookie-session"]}
actix-files = "0.6.6"
log = "0.4"
env_logger = "0.10"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid", "numeric"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
actix = "0.13.5"
serde = {version = "1.0.215", features = ["derive"]}
bigdecimal = {version = "0.4.6", features = ["serde"]}
regex = "1"